fixed line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,13 @@ h1, a.portfolio-item-link {
 
 h1 {
     font-size: 20pt;
+    margin-bottom: 1em; /* restores spacing after the tag */
 }
+
+ul {
+    list-style-type: disc; /* restores the bullet for line items */
+}
+
 
 header, #title-content, #body-content {
     background-color: #ffffff;
@@ -99,8 +105,9 @@ a.navitem:hover {
 }
 
 
-.body-para {
+.body-para, ul {
     line-height: 170%;
+    margin-bottom: 1em; /* restores spacing after the tag */
 }
 
 .textinput {
